kong/gateway-connector/tests/artifacts/api_crs/comments-jwt.yaml
apiVersion: configuration.konghq.com/v1
config:
  claims_to_verify:
  - exp
  header_names:
  - Authorization
  key_claim_name: client_id
  run_on_preflight: false
  uri_param_names: []
kind: KongPlugin
metadata:
  name: jwt-comments-api-plugin
  namespace: kong
plugin: jwt
