kong/gateway-connector/tests/artifacts/api_crs/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/protocol: https
  name: comments-api-service
  namespace: kong
spec:
  externalName: 68870560071f195ca97eed8a.mockapi.io
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
