kong/gateway-connector/tests/artifacts/api_crs/prod-acl.yaml
apiVersion: configuration.konghq.com/v1
config:
  allow:
  - api-67321124153e41d57e7b427c1150106de015240b-production
kind: KongPlugin
metadata:
  labels:
    apiName: APIResourceEndpoint
    apiUUID: 780d341c-20f0-44e4-aa42-4cff613b9d50
    organization: 2e14f1a627e0f7388df2efa85fba6816ac25f094
  name: api-acl-f6243f8cf1f78039a726b0c2157114c52becb296-780d341c-20f0-44e4-aa42-4cff613b9d50-api-production
  namespace: kong
plugin: acl
