kong/gateway-connector/tests/artifacts/api_crs/prod-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    konghq.com/plugins: api-jwt-553a334beabb750498bd5deeda870753e33042d9-780d341c-20f0-44e4-aa42-4cff613b9d50-api,api-acl-f6243f8cf1f78039a726b0c2157114c52becb296-780d341c-20f0-44e4-aa42-4cff613b9d50-api-production
    konghq.com/strip-path: "true"
  name: a1bf6720c628f2045fb83ba478eed39dd06dff4a-production-httproute-0
  namespace: kong
spec:
  hostnames:
  - kong.wso2.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kong
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: my-new-api
      port: 443
      weight: 1
    filters:
    - requestHeaderModifier:
        set:
        - name: Host
          value: httpbin.org
      type: RequestHeaderModifier
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /get
          type: ReplaceFullPath
    matches:
    - method: GET
      path:
        type: RegularExpression
        value: /httpbin/1.0.0/get
  - backendRefs:
    - group: ""
      kind: Service
      name: my-new-api
      port: 443
      weight: 1
    filters:
    - requestHeaderModifier:
        set:
        - name: Host
          value: httpbin.org
      type: RequestHeaderModifier
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /post
          type: ReplaceFullPath
    matches:
    - method: POST
      path:
        type: RegularExpression
        value: /httpbin/1.0.0/post
