kong/gateway-connector/tests/artifacts/api_crs/sand-backend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/protocol: https
  name: backend-807288cfe58368ddaad4cf4c79cd7a7c68baef1a
  namespace: kong
spec:
  externalName: httpbin.org
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
