kong/gateway-connector/tests/artifacts/api_crs/sand-httproute-options.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    konghq.com/strip-path: "true"
  name: a1bf6720c628f2045fb83ba478eed39dd06dff4a-sandbox-httproute-0-options
  namespace: kong
spec:
  hostnames:
  - sandbox.kong.wso2.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kong
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backend-807288cfe58368ddaad4cf4c79cd7a7c68baef1a
      port: 443
      weight: 1
    filters:
    - requestHeaderModifier:
        set:
        - name: Host
          value: httpbin.org
      type: RequestHeaderModifier
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /get
          type: ReplaceFullPath
    matches:
    - method: OPTIONS
      path:
        type: RegularExpression
        value: /httpbin/1.0.0/get
  - backendRefs:
    - group: ""
      kind: Service
      name: backend-807288cfe58368ddaad4cf4c79cd7a7c68baef1a
      port: 443
      weight: 1
    filters:
    - requestHeaderModifier:
        set:
        - name: Host
          value: httpbin.org
      type: RequestHeaderModifier
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /post
          type: ReplaceFullPath
    matches:
    - method: OPTIONS
      path:
        type: RegularExpression
        value: /httpbin/1.0.0/post
